<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.54" />

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="45dp"
        android:layout_height="39dp"
        android:layout_margin="20dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vector_back" />

    <TextView
        android:id="@+id/tv_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/choose_jesture"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/radio_group"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@id/tv_choose"
        >

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/btn_swipe_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:buttonTint="@color/orange"
            android:text="@string/swipe_up"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/btn_swipe_down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:buttonTint="@color/orange"
            android:text="@string/swipe_down"
            android:textColor="@color/white"


            />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/btn_swipe_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:buttonTint="@color/orange"
            android:text="@string/swipe_right"
            android:textColor="@color/white"


            />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/btc_swipe_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:buttonTint="@color/orange"
            android:text="@string/swipe_left"
            android:textColor="@color/white"

            />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/btn_touch_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:buttonTint="@color/orange"
            android:text="@string/touch_screen"
            android:textColor="@color/white"

            />

    </RadioGroup>

    <Button
        android:id="@+id/btn_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:backgroundTint="@color/orange"
        android:text="@string/complete"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        tools:layout_editor_absoluteX="49dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />


</androidx.constraintlayout.widget.ConstraintLayout>