<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_currentStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_status"
        android:textColor="@color/white"
        android:layout_marginStart="55dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_set_gesture"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_currentValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="- - - -"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/tv_currentStatus"
        app:layout_constraintBottom_toTopOf="@+id/btn_set_gesture"
         />

    <Button
        android:id="@+id/btn_set_gesture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:backgroundTint="@color/orange"
        android:text="@string/set_gesture"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />


</androidx.constraintlayout.widget.ConstraintLayout>